lsp cleanup plus other bits of cleanup, new git integration too

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -103,5 +103,6 @@
   "vscode-neovim.neovimInitVimPaths.linux": "~/.config/nvim/",
   "files.watcherExclude": {
     "**/.next/**": true
-  }
+  },
+  "window.zoomLevel": 1
 }
