--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -18,7 +18,6 @@
   "workbench.colorTheme": "Night Owl (No Italics)",
   "editor.rulers": [79],
   "editor.renderWhitespace": "selection",
-  "editor.renderIndentGuides": true,
   "editor.lineNumbers": "relative",
 
   // Cursor
@@ -104,5 +103,6 @@
   "files.watcherExclude": {
     "**/.next/**": true
   },
-  "window.zoomLevel": 1
+  "window.zoomLevel": 1,
+  "editor.guides.indentation": true
 }
