remove volta in place for nvm, add pyenv and starship, remove p10k for prompt

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -442,13 +442,14 @@ bold_italic_font auto
 #: If you want to unmap an action map it to ``no-op``. For example, to
 #: disable opening of URLs with a plain click::
 
-#:     mouse_map left click ungrabbed no-op
+mouse_map left click ungrabbed no-op
 
 #: .. note::
 #:     Once a selection is started, releasing the button that started it will
 #:     automatically end it and no release event will be dispatched.
 
-# clear_all_mouse_actions no
+# clear_all_mouse_actions yes
+mouse_map ctrl+left release grabbed,ungrabbed mouse_handle_click link
 
 #: You can have kitty remove all mouse actions seen up to this point.
 #: Useful, for instance, to remove the default mouse actions.
@@ -837,7 +838,7 @@ bold_italic_font auto
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style slant
 
 #: The tab bar style, can be one of:
 
@@ -1466,7 +1467,7 @@ bold_italic_font auto
 
 # action_alias
 
-#: E.g. action_alias launch_tab launch --type=tab --cwd=current
+action_alias launch_tab launch --type=tab --location=after
 
 #: Define aliases to avoid repeating the same options in multiple
 #: mappings. Aliases can be defined for any action. Aliases are
@@ -1474,8 +1475,8 @@ bold_italic_font auto
 #: create mappings to launch a new tab in the current working
 #: directory without duplication::
 
-#:     map f1 launch_tab vim
-#:     map f2 launch_tab emacs
+map f1 launch_tab --tab-title=Front --cwd="~/Documents/work/front/" nvim
+map f2 launch_tab --tab-title=Back --cwd="~/Documents/work/back/" nvim
 
 #: Similarly, to alias kitten invocation::
 
@@ -1757,13 +1758,13 @@ bold_italic_font auto
 
 #: Next tab
 
-# map kitty_mod+right next_tab
+map ctrl+shift+l next_tab
 # map shift+cmd+]     next_tab
 # map ctrl+tab        next_tab
 
 #: Previous tab
 
-# map kitty_mod+left previous_tab
+map ctrl+shift+h previous_tab
 # map shift+cmd+[    previous_tab
 # map ctrl+shift+tab previous_tab
 
@@ -2080,3 +2081,9 @@ bold_italic_font auto
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# YsDark
+include current-theme.conf
+# END_KITTY_THEME
